# QConsole

./: .gitignore  CMakeLists.txt  README.md  qconsole.h  readthread_win.h
Demo/: CMakeLists.txt  main.cpp
